update course 11 image

--- a/course/11/11.2-解析POST HTTP请求.md
+++ b/course/11/11.2-解析POST HTTP请求.md
@@ -6,7 +6,7 @@
 
 一个POST请求报文的一般格式如下:
 
-<img src='assets/54169edd-ba5d-30e0-b6af-d415d4afcb65.jpg' align='left'/>
+<img src='../../assets/54169edd-ba5d-30e0-b6af-d415d4afcb65.jpg' align='left'/>
 
 一个简单的POST请求示例是:
 
