--- a/course/11/11.6-实现MyRequests-发送请求与接收响应.md
+++ b/course/11/11.6-实现MyRequests-发送请求与接收响应.md
@@ -8,7 +8,7 @@
 
 我们知道，requests库中的request函数是其主要的函数，实际上get函数和post函数只是其的偏函数，例如:
 
-![image-20220813101459920](assets/image-20220813101459920.png)
+![image-20220813101459920](../../assets/image-20220813101459920.png)
 
 
 
