--- a/course/11/11.2-解析POST HTTP请求.md
+++ b/course/11/11.2-解析POST HTTP请求.md
@@ -6,11 +6,7 @@
 
 一个POST请求报文的一般格式如下:
 
-<img src='../../assets/54169edd-ba5d-30e0-b6af-d415d4afcb65.jpg' align='left'/>
-
-</br>
-
-
+![image](../../assets/54169edd-ba5d-30e0-b6af-d415d4afcb65.jpg)
 
 一个简单的POST请求示例是:
 
