--- a/course/11/11.1-解析GET HTTP请求.md
+++ b/course/11/11.1-解析GET HTTP请求.md
@@ -252,7 +252,7 @@ class PreparedRequest():
 
 
 
-接下来我们需要实现`analysis_request`方法，如上面所说: 如果成功解析传入的原始数据，则返回一个自定义的类，里面包含请求的相关输入，如果解释失败，则抛出一个自定义异常。
+接下来我们需要实现`analysis_request`方法，如上面所说: 如果成功解析传入的原始请求报文，则返回一个自定义的类，里面包含请求的相关输入，如果解释失败，则抛出一个自定义异常。
 
 ```python3
 def analysis_request(raw_data):
@@ -266,6 +266,28 @@ def analysis_request(raw_data):
 ## 作业
 
 接下来是你的表演时间!在`code/11/request.py`中实现analysis方法(允许导入标准库，不允许导入第三方库)，并运行`python3 code/11/tests/test_get.py`，确保所有测试样例都顺利通过!
+
+举个例子，假如传入的是以下请求(bytes类型):
+
+```
+GET /get?a=1&b=2 HTTP/1.1\r\n
+Cookie: test=true; key=value
+Host: localhost\r\n
+\r\n
+```
+
+你需要做的是从中解析出method(`GET`), url(`http://localhost/get?a=1&b=2`), http_version(`HTTP/1.1`), headers(`{"Cookie": "test=true; key=value", "Host": "localhost"}`), cookies(`{"test": "true", "key": "value"}`), params(`{"a": "1", "b": "2"}`), body(`b""`)，然后新建一个`PreparedRequest`实例，调用其的`prepare`方法，最后将其返回。
+
+```python3
+req = PreparedRequest()
+...
+req.prepare(method, url, http_version, headers, cookies, params, body)
+return req
+```
+
+
+
+
 
 需要注意的问题:
 
