--- a/course/11/11.5-解析HTTP响应.md
+++ b/course/11/11.5-解析HTTP响应.md
@@ -86,7 +86,7 @@ class Response():
 
 
 
-接下来我们需要实现`analysis_response`方法，如上面所说: 如果成功解析传入的原始数据，则返回一个自定义的类，里面包含响应的相关信息，如果解释失败，则抛出一个自定义异常。
+接下来我们需要实现`analysis_response`方法，如上面所说: 如果成功解析传入的原始响应报文，则返回一个自定义的类，里面包含响应的相关信息，如果解释失败，则抛出一个自定义异常。
 
 ```python3
 def analysis_response(raw_data):
