fix some image path

--- a/course/8/8.3-使用socket编写echo服务器.md
+++ b/course/8/8.3-使用socket编写echo服务器.md
@@ -41,11 +41,11 @@ if __name__ == '__main__':
                 
 ```
 我们可以用nc监听一下7878端口，然后运行pyhon3 echoClient.py 127.0.0.1 7878
-![image](../../assets/Pasted_image_20220814161211.png]]
+![image](../../assets/Pasted_image_20220814161211.png)
 可以看到输入的123和123321
-![image](../../assets/Pasted_image_20220814161223.png]]
+![image](../../assets/Pasted_image_20220814161223.png)
 
 ## 作业
 根据上面的Client，写出对应的echo服务器(echoServer.py)，要求运行服务端，然后在运行客户端连接，输入与输出对应。
 实现效果如下图
-![image](../../assets/Pasted_image_20220814161655.png]]
+![image](../../assets/Pasted_image_20220814161655.png)
