--- a/course/1-5/1. Python介绍与环境安装.md
+++ b/course/1-5/1. Python介绍与环境安装.md
@@ -4,8 +4,8 @@
 ### 什么是Python
 Python 是一个高层次的结合了解释性、编译性、互动性和面向对象的**脚本语言**。
 
-+ Python是一种解释型的语言，再学过C，C++等编译型语言我们知道，他们依赖一个叫做编译器的东西，而解释型语言，是通过解释器解释代码成为字节码然后翻译运行。
-+ Python是一种交互式的语言，我们可以直接运行Python，然后通过提示符，直接输入命令，会实时执行，当然也可以安装ipython插件来进行交互。
++ Python是一种解释型的语言，在学过C，C++等编译型语言我们知道，他们依赖一个叫做编译器的东西，而解释型语言，是通过解释器将代码翻译成字节码，然后在解释器中执行。
++ Python是一种交互式的语言，我们可以直接运行Python，然后通过提示符，直接输入命令，会实时执行，当然也可以安装ipython模块来进行交互式编程。
 
   ![image](../../assets/Pasted_image_20220728160838.png)
 + Python是一个面向对象的语言，Python支持对对象的封装，这样方便我们对一些自己常用的代码进行一个封装，再使用的时候引入，同时这个也使得Python拥有强大的第三方库
