--- a/course/6-7/6. TCP.md
+++ b/course/6-7/6. TCP.md
@@ -61,3 +61,21 @@ TCP依靠校验和，序列号，确认应答等机制保证了可靠性
 ### 四次挥手
 TCP在数据传输完成后，会利用四次挥手去结束连接
 ![image](../../assets/Pasted_image_20220813150653.png)
+
+### Wireshark抓包分析
+下载一个工具Wireshark吧
+打开工具选择一个网卡抓包，根据自己的实际情况选择WLAN或者以太网，然后打开浏览器访问http://httpbin.org
+怎么判断是访问这个网站的流量呢，wireshark里写的都是通信的IP
+我么可以通过httpbin.org去进行查询IP
+![](../../assets/Pasted%20image%2020220817231528.png)
+在流量包里![](../../assets/Pasted%20image%2020220817231604.png)
+因为通信是双向的，我们可以通过`ip.src == 3.94.154.124 || ip.dst == 3.94.154.124`进行过滤
+分析：
+如下
+
+刚开始本地向目标发送SYN包，接着当目标收到后，给我们返回SYN,ACK，当我们收到SYN,ACK我们就发送ACK进行确认，接着就开始正式的HTTP请求
+![](python-course/python_http_public_course/assets/Pasted%20image%2020220817232116.png)
+
+## 作业
+看了上面的概念是不是还是感觉一头雾水。
+那么根据上述抓包分析部分，自己下载wireshark来尝试一下，也可以学习一些其他追踪TCP流的操作，查看TCP流中的HTTP请求与响应数据，下一节内容，也可以结合这个进行学习和分析。
