--- a/course/6-7/7. HTTP.md
+++ b/course/6-7/7. HTTP.md
@@ -42,8 +42,6 @@ Cache-Control: max-age=0
 Content-Length: 30
 Content-Type: application/x-www-form-urlencoded
 Cookie: remember-me=alNCQzZyV2dsc2FsSGMza3NsOXVqQSUzRCUzRDpPaFpZb2F5MFhEU2tuajZNZVpVajRBJTNEJTNE; JSESSIONID=ED0310A081FBC0F1B31D785E3EAD035F
-Origin: http://110.42.233.91:7006
-Referer: http://110.42.233.91:7006/login.php
 Upgrade-Insecure-Requests: 1
 User-Agent: xxxx
 
@@ -108,7 +106,7 @@ HTTP1.1 新增了六种请求方法：OPTIONS、PUT、PATCH、DELETE、TRACE 和
 ### 公用头部
 例如 Content-Type，Content-Length，Transfer-Encoding和Via等字段，均是请求头和响应头中存在的字段。
 
-#### Content-Type:
+#### Content-Type
 常见的媒体类型：
 >-   text/html ： HTML格式
 >-   text/plain ：纯文本格式
@@ -128,7 +126,35 @@ HTTP1.1 新增了六种请求方法：OPTIONS、PUT、PATCH、DELETE、TRACE 和
 >-   application/x-www-form-urlencoded ：表单中默认的encType，form表单数据被编码为key/value格式发送到服务器（表单默认的提交数据的格式）例如name=admin&password=12345
 
 除此之外，利用表单上传文件时，因为表单中包含的数据不仅仅是文件，还有其他input参数，所以格式必须设置为：multipart/form-data
+而mutilpart/form-data的报文参数格式，和其他的差异还是比较大的,我们可以看到如下内容
+```http
+POST / HTTP/1.1
+Host: ip:port
+Content-Length: 292
+Cache-Control: max-age=0
+Upgrade-Insecure-Requests: 1
+Origin: null
+Content-Type: multipart/form-data; boundary=----WebKitFormBoundaryOSYn7vkvW0hUZu5m
+User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/104.0.5112.81 Safari/537.36
+Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9
+Accept-Encoding: gzip, deflate
+Accept-Language: zh-CN,zh;q=0.9
+Connection: close
 
+------WebKitFormBoundaryOSYn7vkvW0hUZu5m
+Content-Disposition: form-data; name="file"; filename="1.jpg"
+Content-Type: image/jpeg
+
+<?php phpinfo(); ?>
+
+------WebKitFormBoundaryOSYn7vkvW0hUZu5m
+Content-Disposition: form-data; name="upload"
+
+
+------WebKitFormBoundaryOSYn7vkvW0hUZu5m--
+```
+在multipart/form-data模式下的Content-type会多一个boundary，也就是边界，用于界定不同的变量，每一个Boundary就是分割了一个变量，最后的变量也会以Boundary来标志结束。
+用表单进行文件上传是一个常用方式，可以看到上面的报文，它会根据选择的文件生成一个`Content-Disposition`  和 `Content-Type` 用于表示文件的一些属性和文件类型。
 #### Content-Length
 先了解一个**持久连接**的概念。
 之前提到，头部字段里有一个connection字段，这个字段是用来控制当前连接的，一般我们看到的可能是close，就是完成请求响应立即断开连接。曾经，这个字段需要设置为keep-alive来保持tcp连接，以备后用，而在目前的HTTP/1.1中，规定所以连接都是一个长连接，除非指定connection字段为close。
@@ -163,3 +189,22 @@ Last-Modified: Sun, 14 Aug 2022 02:16:56 GMT
 当读取到 chunk size为0的时候，表示响应结束，所有的chunk都收到了，所以判断数据是`\r\n0\r\n\r\n`表示结束
 
 
+## 作业
+本次作业不需要你写任何代码，但你需要去着手分析一下HTTP请求。
+你需要一些工具，例如 Burpsuite,Yakit等抓包工具（选一个即可）
+学习抓包，学习httpbin.org的一些接口测试
+例如http://httpbin.org/header会返回你请求的header相关信息。
+如下是请求的 http://httpbin.org/user-agent
+![](python-course/python_http_public_course/assets/Pasted%20image%2020220817221105.png)
+可以尝试不同的请求的方法，例如http://httpbin.org/image/jpeg，去看返回的响应头又有什么不同呢？
+写一个文件上传的表单
+```html
+<form action="http://127.0.0.1/upload" method="post" enctype="multipart/form-data">
+<input type="username" name="username">
+<input type="password" name="password">
+<input type="file" name="file">
+<input type="submit" name="submit">
+</form>
+```
+其中action是可以替换的。
+提交表单，抓一下表单的报文，试着分析表单的特点。
