modify the description

--- a/course/8/8.1-socket介绍.md
+++ b/course/8/8.1-socket介绍.md
@@ -74,4 +74,5 @@ while True:
 
 运行效果应该如下
 ![image](../../assets/Pasted_image_20220814133440.png)
+运行Client.py达成如下效果
 ![image](../../assets/Pasted_image_20220814133503.png)
