--- a/course/10/10.1-面向对象介绍.md
+++ b/course/10/10.1-面向对象介绍.md
@@ -34,7 +34,8 @@
 
 
 
-面向对象不是银弹，上面都是美好的幻想，但是面向对象真的可以帮助我们站在巨人的肩膀上，离优雅更进一步（优雅，实在是太优雅了！）
+面向对象不是银弹，上面都是美好的幻想，但是面向对象真的可以帮助我们站在巨人的肩膀上，离优雅更进一步（优雅，实在是太优雅了！）。
+上面这些目标，也不是只有面向对象才能做到，面向对象只是为了解决问题而进行抽象的方式之一。
 
 
 
@@ -122,9 +123,14 @@ Out[21]: 'add'
 
 
 
-让我们把目光转向不纯的Java吧
+让我们把目光转向不够纯的Java吧，基本类型在Java中不是对象，进行装箱（比如int->Integer）之后，才能当作对象来用
 
 ```java
 1. toString()                     // ✖️ 字面量没有方法
 Integer.valueOf(1).toString();    // ✔️ Java里叫装箱，Integer类型有方法
 ```
+
+
+## 作业
+
+自行寻找相关资料，了解不通编程范式各自有什么特征。
