--- a/course/10/10.2-python类的定义与实例化.md
+++ b/course/10/10.2-python类的定义与实例化.md
@@ -55,7 +55,12 @@ Out[2]: 1
 
 ## 类方法
 
-只需在方法前加上@classmethod装饰器，表示这个方法属于类本身。既然是类的方法，那自然类创建出来的对象也能用
+Python的类方法，类似于Java的static方法，前面的例子中类里面的方法，我们要进行调用必须要先将这个类实例化，
+通过`实例.方法()`来调用。不过如果你对Java有了解，那你这里就好理解了。不了解也没关系，来看下面的讲解：
+
+Python只需在方法前加上`@classmethod`装饰器，表示这个方法属于类本身。我们可以通过`类名.方法()`来调。
+当然，既然是类的方法，那从这个类创建出来的对象也能用。
+
 ```python
 In [1]: class Arithmetic:
    ...:     @classmethod
@@ -63,14 +68,11 @@ In [1]: class Arithmetic:
    ...:         return a + b
    ...:
 
-In [2]: Arithmetic.add(1, 2)
+In [2]: Arithmetic.add(1, 2)    # 通过类直接调用
 Out[2]: 3
 
 In [3]: a = Arithmetic()
 
-In [4]: a.add(1, 2)
+In [4]: a.add(1, 2)             # 类实例化的对象也能调用
 Out[4]: 3
 ```
-
-类里面的方法，如果不需要用到实例独有的属性，那我们要么可以把方法提出来，不放在类里面，要么就写成类方法。这样一来，我们不需要
-实例化就能调用这个方法，直接通过**类对象**进行访问（还记得我说过，Python万物皆对象吗，类本身也是对象）
